avance/solutions/cycle-vie/exercice1/environments/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: secure-app-prod
  labels:
    environment: prod
    security-level: high
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
